fixed other cms page layout issues to keep consistent design

--- a/skin/frontend/default/kapowdesign/css/custom.css
+++ b/skin/frontend/default/kapowdesign/css/custom.css
@@ -2795,12 +2795,14 @@ a:hover { color: #333; }
 #shopping-cart-table .btn-remove2:hover { border:none; padding-bottom:0; }
 
 .checkout-cart-index, .checkout-onepage-index, .sales-order-history, 
-.customer-account-logoutsuccess, .customer-account-login, .customer-account-create, .cms-faqs {
+.customer-account-logoutsuccess, .customer-account-login, .customer-account-create, .cms-faqs
+.cms-privacy-statement, .cms-terms-of-use {
 	background: black url(../images/recent_bg.png);
 }
 .checkout-onepage-index .main, .sales-order-history .main, 
 .customer-account-logoutsuccess .main, .customer-account-login .main,
-.customer-account-create .main, .cms-faqs .main {
+.customer-account-create .main, .cms-faqs .main, .cms-privacy-statement .main, 
+.cms-terms-of-use .main {
 	margin-bottom:140px;
 	font-family: 'BrandonG', Arial, sans-serif;
 }
